feat/refactor(api): score state change now requires ScoreId instead of RankedScoreId
